sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
      if(!plusPetitQue(j,v)&&j=0){
                           ^